--- a/config/Makefile.git
+++ b/config/Makefile.git
@@ -2,7 +2,7 @@ STU_ID = 141220000
 
 # DO NOT modify the following code!!!
 
-GITFLAGS = -q --author='tracer-ics2015 <tracer@njuics.org>' --no-verify --allow-empty
+GITFLAGS = -q --author='' --no-verify --allow-empty
 
 # prototype: git_commit(msg)
 define git_commit
